# rules_contest

./: .bazelrc  .readthedocs.yaml  .travis.yml  BUILD  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE
.bcr/: metadata.template.json  source.template.json
.ci/: bazelrc  run.sh
.github/workflows/: example.yml  main.yml  release.yml  test.yml
book/: book.toml
book/src/: SUMMARY.md  getting_started.md
book/src/guide/: constraints.md  new_workspace.md  solutions.md  statements.md
book/src/reference/: rules.md  targets.md
contest/: BUILD  BUILD.bazel  defs.bzl  exact_comparator.sh  experimental_defs.bzl  render_test_results.py  run_solution_tests.py  test_results.html  test_results.md
contest/impls/: BUILD  BUILD.bazel  cc_yaml_library.py  dataset_derive.py  dataset_generate.py  dataset_merge.py  dataset_test.py  dataset_test_wrapper_generator.py  datasets.py  datasets_test.py  domjudge_package.py  interactive_judge.py  interactive_judge_wrapper_generator.py  jinja2_template.py  py_yaml_library.py  render_markdown.py  sample_test_solution_generator.py  simple_judge.py  simple_judge_wrapper_generator.py  solution_test_wrapper_generator.py
contest/impls/docs/: BUILD
contest/impls/lib/: BUILD  BUILD.bazel  datasets.py  exec_util.py  judge_common.py  judge_report.py
contest/impls/lint/: BUILD  defs.bzl
docs/: conf.py  getting_started.md  index.md  index.rst  requirements.txt  welcome.md
docs/api/: rules.md  targets.md
docs/guide/: constraints.md  datasets.md  example_graph.md  new_repository.md  new_workspace.md  solutions.md  statements.md  tracker.md
docs/reference/: rules.md  targets.md
example/: WORKSPACE
example/ab/: BUILD  statement.md
example/ab/cpp/: BUILD
example/ab/cpp_WA/: BUILD
example/ab/judge/: BUILD  generator.py  validator.py
example/ab/python/: BUILD
example/tools/build_rules/: prelude_bazel
lint/: BUILD  defs.bzl
testmod/: .bazelrc  MODULE.bazel
testmod/sqrt/: BUILD.bazel  statement.md
testmod/sqrt/judge/: 00-sample3.out  BUILD.bazel  comparator.py  generator.py  validator.py
testmod/sqrt/solutions/: BUILD.bazel
testmod/sum/: BUILD.bazel
testmod/sum/judge/: BUILD.bazel  generator.py  validator.py
testmod/sum/solutions/: BUILD.bazel
tests/bazel_behavior/: BUILD  BUILD.bazel  args_test.py
tests/dataset_derive/: BUILD  BUILD.bazel  dataset_merge_test.py  deriver.py
tests/dataset_generate/: BUILD  BUILD.bazel  dataset_generate_test.py  generator.py
tests/dataset_merge/: BUILD  BUILD.bazel  dataset_merge_test.py
tests/dataset_test/: BUILD  BUILD.bazel  validator.py
tests/domjudge_package/: BUILD  BUILD.bazel  domjudge-problem.ini  problem.yaml  statement.html
tests/example/sqrt/: BUILD  BUILD.bazel  constraints.yaml  domjudge-problem.ini  problem.yaml
tests/example/sqrt/judge/: BUILD  BUILD.bazel  comparator.py  generator.py  validator.py
tests/example/sqrt/python/: BUILD  BUILD.bazel  python.py
tests/example/sum/: BUILD  BUILD.bazel  constraints.yaml  domjudge-problem.ini  problem.yaml  statement.md
tests/example/sum/cpp/: BUILD  BUILD.bazel
tests/example/sum/cpp_WA/: BUILD  BUILD.bazel
tests/example/sum/judge/: BUILD  BUILD.bazel  generator.py  validator.py
tests/example/sum/python/: BUILD  BUILD.bazel  python.py
tests/interactive_judge/: BUILD  BUILD.bazel  bad_solution.py  good_solution.py  half_solution.py  interactive_judge_test.py  peer.py  results_golden.json  server.c  server.py  server_with_runfiles.py  solution_bad.c  solution_good.c  solution_half.c  solution_slow.c  solution_with_runfiles.py
tests/render_test_results/: BUILD.bazel  filter_build_jsonl.py  golden.md  render_test_results_test.py  update_golden.sh  update_testdata.sh
tests/render_test_results/subtests/: BUILD  BUILD.bazel
tests/render_test_results/subtests/A/: BUILD.bazel  solution.c
tests/render_test_results/subtests/B/: BUILD  BUILD.bazel  solution.c
tests/render_test_results/testdata/: build.jsonl
tests/simple_judge/: BUILD  BUILD.bazel  bad_solution.py  comparator.py  comparator_with_runfiles.py  good_solution.py  half_solution.py  long_solution.py  results_golden.json  simple_judge_test.py  solution_bad.c  solution_good.c  solution_half.c  solution_slow.c  solution_with_runfiles.py
