load("//lint:defs.bzl", "lint_all")
load("@rules_python//python:defs.bzl", "py_binary")

lint_all()

exports_files([
    "defs.bzl",
    "experimental_defs.bzl",
])

sh_binary(
    name = "exact_comparator",
    srcs = ["exact_comparator.sh"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "fake_coverage_report_generator",
    srcs = ["fake_coverage_report_generator.sh"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "render_test_results",
    srcs = ["render_test_results.py"],
    data = ["test_results.md"],
    python_version = "PY3",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = ["//third_party/jinja2"],
)
