load("//contest:defs.bzl", "dataset_merge", "dataset_test")
load("//lint:defs.bzl", "lint_all")
load("@rules_python//python:defs.bzl", "py_binary")

lint_all()

dataset_merge(
    name = "dataset",
    files = glob(["*.txt"]),
)

py_binary(
    name = "validator",
    srcs = ["validator.py"],
    data = [":validator.data"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = ["//third_party/runfiles"],
)

dataset_test(
    name = "stdin_test",
    cmd = "${EXEC} < ${INPUT_DIR}/${TESTCASE}.txt",
    dataset = ":dataset",
    exec = ":validator",
)

dataset_test(
    name = "file_test",
    cmd = "${EXEC} ${INPUT_DIR}/${TESTCASE}.txt",
    dataset = ":dataset",
    exec = ":validator",
)
