load("//lint:defs.bzl", "lint_all")
load("@rules_python//python:defs.bzl", "py_test")

lint_all()

py_test(
    name = "render_test_results_test",
    srcs = ["render_test_results_test.py"],
    data = [
        "//contest:render_test_results",
        "golden.md",
    ] + glob(["testdata/**"]),
    python_version = "PY3",
    srcs_version = "PY3",
)
