load("//lint:defs.bzl", "lint_all")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

lint_all()

py_library(
    name = "datasets",
    srcs = ["datasets.py"],
    srcs_version = "PY3",
    visibility = ["//contest/impls:__subpackages__"],
)

py_test(
    name = "datasets_test",
    srcs = ["datasets_test.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [":datasets"],
)

py_library(
    name = "exec_util",
    srcs = ["exec_util.py"],
    srcs_version = "PY3",
    visibility = ["//contest/impls:__subpackages__"],
)

py_library(
    name = "judge_common",
    srcs = ["judge_common.py"],
    srcs_version = "PY3",
    visibility = ["//contest/impls:__subpackages__"],
    deps = [":datasets"],
)
