load("//contest:defs.bzl", "jinja2_template", "markdown", "py_yaml_library")
load("//contest:experimental_defs.bzl", "domjudge_package")
load("//lint:defs.bzl", "lint_all")

package(default_visibility = ["//tests/example/sum:__subpackages__"])

lint_all()

py_yaml_library(
    name = "constraints_py",
    src = "constraints.yaml",
)

jinja2_template(
    name = "statement_subst",
    srcs = ["statement.md"],
    dataset = "//tests/example/sum/judge:dataset",
    files = ["//tests/example/sum/judge:sample_outputs"],
    vars = ["constraints.yaml"],
)

markdown(
    name = "statement",
    src = ":statement_subst",
)

domjudge_package(
    name = "sum",
    dataset = "//tests/example/sum/judge:dataset",
    domjudge_metadata = "domjudge-problem.ini",
    icpc_metadata = "problem.yaml",
    statements = [":statement"],
)
