load("//contest:defs.bzl", "solution_test")
load("//lint:defs.bzl", "lint_all")

package(default_visibility = ["//tests/example/sqrt:__subpackages__"])

lint_all()

py_binary(
    name = "python",
    srcs = ["python.py"],
    python_version = "PY3",
    srcs_version = "PY3",
)

solution_test(
    name = "python_test",
    judge = "//tests/example/sqrt/judge",
    solution = ":python",
)
