load("//contest:defs.bzl", "solution_test")
load("//lint:defs.bzl", "lint_all")
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//tests/example/sum:__subpackages__"])

lint_all()

py_binary(
    name = "python",
    srcs = ["python.py"],
    python_version = "PY3",
    srcs_version = "PY3",
)

solution_test(
    name = "python_test",
    judge = "//tests/example/sum/judge",
    solution = ":python",
)
