load("//contest:defs.bzl", "dataset_merge", "simple_judge", "solution_test")
load("//lint:defs.bzl", "lint_all")
load("@rules_cc//cc:defs.bzl", "cc_binary")

lint_all()

dataset_merge(
    name = "dataset",
    files = glob([
        "*.in",
        "*.ans",
    ]),
)

simple_judge(
    name = "judge",
    dataset = ":dataset",
)

cc_binary(
    name = "solution",
    srcs = ["solution.c"],
    copts = ["-Wno-unused-result"],
)

solution_test(
    name = "solution_accept_all_test",
    judge = ":judge",
    solution = ":solution",
    tags = [
        "exclusive",
        "manual",
    ],
)

solution_test(
    name = "solution_reject_any_test",
    judge = ":judge",
    judge_args = ["--expect=reject_any"],
    solution = ":solution",
    tags = [
        "exclusive",
        "manual",
    ],
)
